--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "element-ui": "^2.11.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
     "mongoose": "^5.6.8",
